# Dining_philosophers_problem

./: CMakeLists.txt  Dining_time.h  Philosopher.cpp  Philosopher.h  README.md  main.cpp
